clusters/beelink-talos/novacart/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: ghcr.io/open-telemetry/demo:2.1.3-checkout
          imagePullPolicy: IfNotPresent
          ports:
            - name: grpc
              containerPort: 5050
          env:
            - name: CHECKOUT_PORT
              value: "5050"
            - name: CART_ADDR
              value: cart:7070
            - name: CURRENCY_ADDR
              value: currency:7001
            - name: EMAIL_ADDR
              value: http://email:6060
            - name: PAYMENT_ADDR
              value: payment:50051
            - name: PRODUCT_CATALOG_ADDR
              value: product-catalog:3550
            - name: SHIPPING_ADDR
              value: http://shipping:50050
            - name: FLAGD_HOST
              value: flagd
            - name: FLAGD_PORT
              value: "8013"
            - name: GOMEMLIMIT
              value: 16MiB
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector:4317
            - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
              value: cumulative
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.namespace=novacart,service.version=2.1.3
            - name: OTEL_SERVICE_NAME
              value: checkout
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 200m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: novacart
spec:
  selector:
    app: checkout
  ports:
    - name: grpc
      port: 5050
      targetPort: grpc
