clusters/beelink-talos/novacart/frontend-layer.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: frontend-proxy-config
  namespace: novacart
data:
  envoy.tmpl.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: ${ENVOY_PORT}
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: AUTO
                    stat_prefix: ingress_http

                    tracing:
                      spawn_upstream_span: true
                      provider:
                        name: envoy.tracers.opentelemetry
                        typed_config:
                          "@type": type.googleapis.com/envoy.config.trace.v3.OpenTelemetryConfig
                          grpc_service:
                            envoy_grpc:
                              cluster_name: opentelemetry_collector_grpc
                            timeout: 0.250s
                          service_name: ${OTEL_SERVICE_NAME}
                          resource_detectors:
                            - name: envoy.tracers.opentelemetry.resource_detectors.environment
                              typed_config:
                                "@type": type.googleapis.com/envoy.extensions.tracers.opentelemetry.resource_detectors.v3.EnvironmentResourceDetectorConfig

                    route_config:
                      name: local_route
                      virtual_hosts:
                        - name: frontend
                          domains:
                            - "*"
                          routes:
                            - match:
                                prefix: "/otlp-http/"
                              route:
                                cluster: opentelemetry_collector_http
                                prefix_rewrite: "/"

                            - match:
                                prefix: "/images/"
                              route:
                                cluster: image-provider
                                prefix_rewrite: "/"

                            - match:
                                prefix: "/flagservice/"
                              route:
                                cluster: flagservice
                                prefix_rewrite: "/"
                                timeout: 0s

                            - match:
                                prefix: "/"
                              route:
                                cluster: frontend

                    http_filters:
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                    access_log:
                      - name: envoy.access_loggers.open_telemetry
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.access_loggers.open_telemetry.v3.OpenTelemetryAccessLogConfig
                          common_config:
                            log_name: otel_envoy_access_log
                            grpc_service:
                              envoy_grpc:
                                cluster_name: opentelemetry_collector_grpc
                            transport_api_version: V3
                          body:
                            string_value: '[%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %DURATION% "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%"'
                          resource_attributes:
                            values:
                              - key: service.name
                                value:
                                  string_value: ${OTEL_SERVICE_NAME}

      clusters:
        - name: opentelemetry_collector_grpc
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
              explicit_http_config:
                http2_protocol_options: {}
          load_assignment:
            cluster_name: opentelemetry_collector_grpc
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${OTEL_COLLECTOR_HOST}
                          port_value: ${OTEL_COLLECTOR_PORT_GRPC}

        - name: opentelemetry_collector_http
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: opentelemetry_collector_http
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${OTEL_COLLECTOR_HOST}
                          port_value: ${OTEL_COLLECTOR_PORT_HTTP}

        - name: frontend
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: frontend
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${FRONTEND_HOST}
                          port_value: ${FRONTEND_PORT}

        - name: image-provider
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: image-provider
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${IMAGE_PROVIDER_HOST}
                          port_value: ${IMAGE_PROVIDER_PORT}

        - name: flagservice
          type: STRICT_DNS
          lb_policy: ROUND_ROBIN
          load_assignment:
            cluster_name: flagservice
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: ${FLAGD_HOST}
                          port_value: ${FLAGD_PORT}

    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: ${ENVOY_ADMIN_PORT}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/open-telemetry/demo:2.1.3-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          env:
            - name: PORT
              value: "8080"
            - name: FRONTEND_ADDR
              value: frontend:8080
            - name: ENV_PLATFORM
              value: local
            - name: AD_ADDR
              value: ad:9555
            - name: CART_ADDR
              value: cart:7070
            - name: CHECKOUT_ADDR
              value: checkout:5050
            - name: CURRENCY_ADDR
              value: currency:7001
            - name: PRODUCT_CATALOG_ADDR
              value: product-catalog:3550
            - name: RECOMMENDATION_ADDR
              value: recommendation:9001
            - name: SHIPPING_ADDR
              value: http://shipping:50050
            - name: FLAGD_HOST
              value: flagd
            - name: FLAGD_PORT
              value: "8013"
            - name: OTEL_COLLECTOR_HOST
              value: otel-collector
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector:4317
            - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
              value: cumulative
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.namespace=novacart,service.version=2.1.3
            - name: OTEL_SERVICE_NAME
              value: frontend
            - name: WEB_OTEL_SERVICE_NAME
              value: frontend-web
            - name: PUBLIC_OTEL_EXPORTER_OTLP_TRACES_ENDPOINT
              value: /otlp-http/v1/traces
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 320Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: novacart
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-proxy
  namespace: novacart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-proxy
  template:
    metadata:
      labels:
        app: frontend-proxy
    spec:
      containers:
        - name: frontend-proxy
          image: ghcr.io/open-telemetry/demo:2.1.3-frontend-proxy
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: admin
              containerPort: 10000
          env:
            - name: ENVOY_PORT
              value: "8080"
            - name: ENVOY_ADMIN_PORT
              value: "10000"
            - name: FRONTEND_HOST
              value: frontend
            - name: FRONTEND_PORT
              value: "8080"
            - name: IMAGE_PROVIDER_HOST
              value: image-provider
            - name: IMAGE_PROVIDER_PORT
              value: "8081"
            - name: FLAGD_HOST
              value: flagd
            - name: FLAGD_PORT
              value: "8013"
            - name: OTEL_COLLECTOR_HOST
              value: otel-collector
            - name: OTEL_COLLECTOR_PORT_GRPC
              value: "4317"
            - name: OTEL_COLLECTOR_PORT_HTTP
              value: "4318"
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.namespace=novacart,service.version=2.1.3
            - name: OTEL_SERVICE_NAME
              value: frontend-proxy
          volumeMounts:
            - name: config
              mountPath: /home/envoy/envoy.tmpl.yaml
              subPath: envoy.tmpl.yaml
              readOnly: true
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              cpu: 250m
              memory: 96Mi
      volumes:
        - name: config
          configMap:
            name: frontend-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
  namespace: novacart
spec:
  selector:
    app: frontend-proxy
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-generator
  namespace: novacart
spec:
  replicas: 0
  selector:
    matchLabels:
      app: load-generator
  template:
    metadata:
      labels:
        app: load-generator
    spec:
      containers:
        - name: load-generator
          image: ghcr.io/open-telemetry/demo:2.1.3-load-generator
          imagePullPolicy: IfNotPresent
          ports:
            - name: locust
              containerPort: 8089
          env:
            - name: LOCUST_HOST
              value: http://frontend-proxy:8080
            - name: LOCUST_AUTOSTART
              value: "true"
            - name: LOCUST_HEADLESS
              value: "true"
            - name: LOCUST_USERS
              value: "5"
            - name: LOCUST_SPAWN_RATE
              value: "1"
            - name: LOCUST_BROWSER_TRAFFIC_ENABLED
              value: "false"
            - name: LOCUST_WEB_HOST
              value: 0.0.0.0
            - name: LOCUST_WEB_PORT
              value: "8089"
            - name: FLAGD_HOST
              value: flagd
            - name: FLAGD_PORT
              value: "8013"
            - name: FLAGD_OFREP_PORT
              value: "8016"
            - name: OTEL_EXPORTER_OTLP_ENDPOINT
              value: http://otel-collector:4317
            - name: OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE
              value: cumulative
            - name: OTEL_RESOURCE_ATTRIBUTES
              value: service.namespace=novacart,service.version=2.1.3
            - name: OTEL_SERVICE_NAME
              value: load-generator
            - name: PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION
              value: python
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 300m
              memory: 160Mi
---
apiVersion: v1
kind: Service
metadata:
  name: load-generator
  namespace: novacart
spec:
  selector:
    app: load-generator
  ports:
    - name: locust
      port: 8089
      targetPort: locust
